--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/react": "^3.2.2",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.5",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "html-react-parser": "^3.0.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
